--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
   <header class=" cabeçalho">
     <span class="cabeçalho
-   <img scr="img/Logo.svg"Logo da alurabooks">
-      <a scr="
+   <img src="img/Logo.svg"Logo da alurabooks">
+      <a src="#"><img src="img/Compras.svg" alt="Meus favoritos"><a/>
+        <a src="#"><img src="img/Usuario.svg"alt="Carrinho de compras"></a>
+        <a href="#">< img src="img/Usuario.svg"alt="Meu perfil"></a>
+        </header>
+      </body>
