--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE HTMLL>
+<HTML>
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport"content="width=device-width,initial-scalep=1.0">
+  <title>Alurabooks</title>
+  <link rel="stylesheet"href="reset.css
+
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
