--- a/index.html
+++ b/index.html
@@ -37,3 +37,14 @@
     <li class="lista-menu_item">
       <a href="#" class="lista-menu_link">programação</a>
     </li>
+
+ 
+ 
+ 
+ 
+ 
+ <ul class="opções">
+  <input type="checkbox"id="opções-menu"class="opções_botão">
+ <label for="opções-menu"class="opções_rotulo">
+  <li class="opções_opções_item">Categorias</li>
+  </libel>
