--- a/index.html
+++ b/index.html
@@ -52,3 +52,13 @@
  ,li clss="lista-menu_item">
  <a href="#"class+"lista-menu_link"> programaçaõ</a>
  </li>
+<li class="lista-menu_item">
+    <a href="#"class="lista-menu_link">Front-end</>
+    </li>
+<li class="lista-menu_item">
+   <a href="#" class="lista-menu_link">infraestrutura</a>
+</li>
+sli class="lista-menu_item">
+ <a href="#" class="lista-menu_link">Desing & UX</a>
+</li>
+</ul>
