--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ sli class="lista-menu_item">
 </li>
 </ul>
 
-
+<li class="opções_item"><a href="#" class="opções_link">Favoritos</a></li>li
+  <li class="opções_item"><a href="#" class="opções_link">Minha estantr</a></li>li
+ </ul>
 
   
