--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@ sli class="lista-menu_item">
 </ul>
 
 <li class="opções_item"><a href="#" class="opções_link">Favoritos</a></li>li
-  <li class="opções_item"><a href="#" class="opções_link">Minha estantr</a></li>li
+  <li class="opções_item"><a href="#" class="opções_link">Minha estantre</a></li>li
  </ul>
 
-  
+<div class="conrainer">
+   <a href="#"><img src="img/Fovoritos.svg"alt="Meus favoritos"
+           class="conrainer_imagem container_imagem-transparente></a>
+        <a href="#" class="container_link">
+     <img src="img/Compras.svg"alt="Carrinhos de compras"class="contrainer_imagem">
+   <p class="container_texto">Minha sacola</p>
+    <a/>
+
+       
