--- a/index.html
+++ b/index.html
@@ -75,4 +75,13 @@ sli class="lista-menu_item">
    <p class="container_texto">Minha sacola</p>
     <a/>
 
-       
+   <a href="#"class="container_link">
+       <img src=" img/Usuario.svg"alt="Meu perfil"class="container_imagem">
+    <p class"container_texto">Meu perfil/</p>p>
+    <a/>
+    </div>
+    </header>
+     <section class="banner">
+      <h2 class="banner_titulo">já sabe por onde começar?</h2>
+      <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimenro!</p>
+     <input type="search"banner_pesquisa"
