--- a/index.html
+++ b/index.html
@@ -85,3 +85,41 @@ sli class="lista-menu_item">
       <h2 class="banner_titulo">já sabe por onde começar?</h2>
       <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimenro!</p>
      <input type="search"banner_pesquisa"
+
+
+< section class="carrossel">
+ <h2 class="carrossel_titulo">Novos lançamentos</h2>
+,!--Slider main container-->
+ <div class="carrossel_container">
+  <div class="swiper">
+   <!--Additional required wrapper-->
+   <!--lf we need pagination-->
+   <div class="swiper-pagination"></div>div>
+
+<div class="swiper-wrapper">
+     <!--Slide-->
+     <div class="swiper-slide"><img src="img/Apachekafka.svg
+        alt="Livro sobre apache kafka e spring boot da alura books"></div>
+ <div class="swiper-slide"><img src="img/Liderangça.svg"
+     alt="Livro sobre liderança em design da alura books"></div>
+ <div class="swiper-slide"><img src="img/javascript.svg"
+  alt="Livro sobre javascript assertivo da alurabooks"></div>
+ < div class="swiper-slide"><img src="/Guia front-end.svg" alt="Livro Guia front end"></div>
+<div class="swiper-slide"><img src="/Portugol.svg"alt="Livro sobre portugol"></div>
+ <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+</div>
+
+
+
+
+
+   
+
+
+
+
+
+ 
+
+
+      
