--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@ sli class="lista-menu_item">
  <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
 </div>
 
-
+<!--lf we need navigation buttons-->
+   <div class="swiper-button-prev"></div>
+   <div class="swiper-button-next"></div>
+  </div>
 
 
 
