--- a/index.html
+++ b/index.html
@@ -114,8 +114,15 @@ sli class="lista-menu_item">
    <div class="swiper-button-next"></div>
   </div>
 
-
-
+ <div class="card">
+   <!--1º linha-->
+  <div class="card_descrição">
+   <!--1º coluna-->
+   <div class="descrição">
+    <h3 class="discrição_titulo">Talvez voce também se interresse por...</h3>
+    <h2 class="descrição_titulo-livro">Angular 11 e Firebase</h2>
+    <p class="descrição_texto">Contruindo uma aplicação integrada com plataforma do google</p>
+   </div>
    
 
 
