--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <body>
   <header class=" cabeçalho">
     <span class="cabeçalho
+     <h1>Alura Midi</h1>
+
+     <section class="teclado">
+     <button class="teclado">
+      <button clas="tecla tecla_pom">Pom</button>
+      <button class="tecla tecla_clap">Clap</button>
+      <button class="tecla tecla_tim">Tim</button>
    <img src="img/Logo.svg"Logo da alurabooks">
       <a src="#"><img src="img/Compras.svg" alt="Meus favoritos"><a/>
         <a src="#"><img src="img/Usuario.svg"alt="Carrinho de compras"></a>
@@ -115,6 +122,7 @@ sli class="lista-menu_item">
   </div>
 
  <div class="card">
+  
    <!--1º linha-->
   <div class="card_descrição">
    <!--1º coluna-->
